[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["yankovskaya <yankovskaya.my@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
